[package]
name = "commit-assist"
version = "0.1.1"
edition = "2024"
authors = ["Katsuhiro Honda"]
description = "AI-powered git commit message generator"
license = "MIT"
repository = "https://github.com/katsuhirohonda/commit-assist"
keywords = ["git", "commit", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
